further fix text alignment

--- a/style.css
+++ b/style.css
@@ -79,7 +79,6 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     gap: 20px;
     color: white;
 }
@@ -90,15 +89,13 @@ body {
     border: solid #1f2937 3px;
     border-radius: 8px;
 }
-.info-imgs {
+.info-column-container {
     margin-top: 15px;
     display: flex;
-    gap: 30px;
-    width: 50%;
-}
-
-.info-imgs div {
+    justify-content: center;
     text-align: center;
+    gap: 30px;
+    width: 10rem;
 }
 .info-imgs p {
     color: #e6e6e6;
@@ -136,6 +133,7 @@ body {
     display: flex;
     flex-direction: column;
     color: white;
+    padding-right: 140px;
 }
 .cta-form-left :first-child {
     font-size: 2rem;
